Bug 428013 - crash [@ nsPrintEngine::DocumentReadyForPrinting() ] when page is drag&drop to Print Preview window after printing, r=sharparrow1, sr=roc